# iitii

./: .gitignore  CMakeLists.txt  README.md  example.cc  iitii.h  notes_on_cgranges.md
src/: iitii.h  main.cpp
test/: CMakeLists.txt  dumb_benchmark.cc  gnomad_benchmark.cc  gnomad_benchmark.ipynb  ideal_benchmark.cc  test_iitii.cc  util.h
